# scLucid

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  FIX.md  LICENSE  PLAN.md  README.md  REVIEW.md  environment.yml  pyproject.toml  pytest.ini  setup.py  skill.md
.archive/web/: __init__.py  cli.py  dash_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: lin2020.pdac.h5ad  pbmc3k.h5ad  schlesinger2020.pdac.h5ad
data/human_LUAD_GSE131907/: GSE131907_Lung_Cancer_Feature_Summary.xlsx
docs/: CORE_VALUE_PROPOSITION.md  DATA_USAGE_GUIDE.md  DEVELOPMENT_ROADMAP.md  FINAL_ANSWER.md  INTELLIGENT_QC_SUMMARY.md  MARKER_RESOURCE_CURATION.md  Makefile  NAMING_CONVENTIONS.md  PLUGIN_DEVELOPMENT_GUIDE.md  QC_MODULE_CLEANUP_COMPLETED.md  QC_MODULE_CLEANUP_PLAN.md  QC_MODULE_SUMMARY.md  QC_STRATEGY_COMPARISON.md  QC_STRATEGY_EVALUATION.md  THREE_QUESTIONS_ANSWERED.md  Tutorial-standard-analysis.docx
docs/notebooks/: 03_clustering_annotation.ipynb  04_advanced_topics.ipynb
docs/source/: best_practices.rst  conf.py  data_contracts.rst  examples.rst  faq.rst  index.rst  installation.rst  marker_resources.rst  notebooks.rst  proportion_methods_guide.rst  qc_preprocess_maturity.rst  quickstart.rst  r_parity.rst  usage_layers.rst  validation_scaffold.rst  workflow_hardening.rst
examples/: README.md  basic_workflow.py  curated_annotation_workflow.py  custom.py  demo_qc_evaluation.py  evaluate_qc_pbmc.py  evaluate_qc_strategies.py  intelligent_preprocessing_example.py  intelligent_qc_example.py  preprocessing.py  qc_pipeline.py  quickstart.py  standard.py  verify_evaluation_logic.py
examples/01_workflow/: basic_pipeline.py  plugin_development.py  prepare_data.py
examples/02_simple_api/: annotation_report.py  intelligent_qc.py  preprocess_step_by_step.py  qc_preprocess_review.py  qc_step_by_step.py
examples/03_advanced_notebooks/: README.md  Step1-QC_and_Preprocessing.ipynb  Step1A-QC_Audit.ipynb  Step1B-Preprocessing_Audit.ipynb  Step2-Annotation_and_Malignancy.ipynb  Step2-Celltype_annotation.ipynb  Step3-Standard_Downstream.ipynb  Step4-Signature_and_Target_Analysis.ipynb
examples/04_publication_figures/: 01_umap_annotation.py  02_marker_heatmap.py  03_volcano_de.py  04_cnv_heatmap.py  README.md
notebooks/: 01_quality_control.ipynb  02_preprocessing.ipynb  03_clustering_annotation.ipynb  README.md  Step1-template.ipynb
openspec/: project.md
scLucid/: __init__.py
scLucid/analysis/: __init__.py  differential.py  enrichment.py
scLucid/preprocess/: integrate.py  neighbors.py  normalize.py  scale.py
scLucid/qc/: __init__.py  workflow.py
scLucid/resources/: marker_base_mouse.toml
scLucid/tools/: cellphonedb.py  rtools.py
scLucid/utils/: marker_manager.py  utils.py
scRNA/: __init__.py  config.py  helper.py  hvg.py  integrate.py  manager.py  norm.py  qc.py  workflow.py
scRNA/analysis/: __init__.py  annotation.py  cluster.py  differential.py  dimension.py  manager.py  manager_human.toml
scRNA/preprocess/: __init__.py  cycle.py  hvg.py  integrate.py  normalize.py  scale.py
scRNA/qc/: __init__.py  doublet.py  filtering.py  metrics.py
scRNA/resources/: cell_cycle_genes.json  marker_base_human.toml  marker_base_mouse.toml  marker_cell_state_human.toml  marker_tissue_specific_human.toml  tissue_specific_human.toml
scRNA/tools/: __init__.py  infercnv.py  rtools.py  sccoda.py  tf_analysis.py
scRNA/utils/: __init__.py  anndata_helpers.py  io.py  plotting.py  utils.py
scRNA/workflows/: __init__.py  standard.py
scripts/: convert_human_luad.py  convert_human_luad_chunked.py  convert_human_luad_efficient.py  convert_mouse_melanoma.py  convert_mouse_melanoma_v2.py  convert_mouse_melanoma_with_meta.py  convert_test_data_to_h5ad.py  run_analysis_acceptance.py  run_pbmc_golden_path.py  run_pdac_golden_path.py  run_test_gates.sh  validate_qc_lin2020.py  validate_qc_pbmc3k.py  validate_qc_schlesinger2020.py
src/scLucid/: __init__.py  base_config.py  base_interfaces.py  config.py  runtime.py  settings.py  workflow_checkpoint.py
src/scRNA/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_configs.py  test_context.py  test_contracts.py
tests/analysis/: test_analysis_public_api.py  test_analysis_review_summary.py  test_annotation.py  test_clustering.py  test_config.py  test_de_core.py  test_de_workflows.py  test_proportion_plots.py  test_proportion_stats.py  test_scoring.py  test_workflow.py
tests/config/: test_global_config_runtime.py
tests/examples/: test_publication_figures.py
tests/fixtures/: DATA_GUIDE.md  __init__.py  data_loader.py  synthetic_data.py
tests/integration/: test_analysis_acceptance.py  test_full_pipeline.py  test_pbmc_golden_path.py  test_real_data_pipeline.py  test_tumor_pdac_acceptance.py
tests/preprocess/: test_backend.py  test_config_helpers.py  test_hvg.py  test_integrate.py  test_neighbors.py  test_normalize.py  test_plot_normalization_effect.py  test_preprocess_public_api.py  test_preprocess_review_summary.py  test_preprocess_semantics.py  test_quality_aware_normalize.py  test_scale.py  test_workflow.py
tests/qc/: test_adaptive_threshold.py  test_doublet.py  test_filtering.py  test_generate_doublet_rates.py  test_intelligent_qc.py  test_mark_low_quality_cells_adaptive.py  test_qc_benchmark.py  test_qc_metrics.py  test_qc_public_api.py  test_qc_recommendation_benchmark.py  test_qc_recommendation_executable.py  test_qc_standardization.py  test_qc_threshold_mode.py  test_qc_trace.py  test_qc_tumor_aware.py  test_qc_workflow.py  test_reporting.py
tests/recommendation/: test_engine.py  test_schema.py  test_tumor_adapter.py
tests/smoke/: test_imports.py  test_runtime_environment.py  test_untested_modules.py
tests/tools/: test_bulk_deconvolution.py  test_pyBayesPrism.py  test_pyDWLS.py  test_pyMonocle3.py  test_pycellchat.py  test_tools_public_api.py
tests/tumor/: test_cnv.py  test_cnv_smoke.py  test_evolution.py  test_heterogeneity.py  test_malignancy.py  test_malignancy_smoke.py  test_therapy.py  (+2 more)
(+347 files in other folders)
