[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scRNA-toolkit"
version = "0.1.0"
authors = [
  { name="Yelu61", email="your_email@example.com" },
]
description = "A Python package for single-cell RNA-seq analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# 在这里声明你的依赖项
dependencies = [
    "scanpy>=1.9.0",
    "pandas>=2.0.0",
    "numpy",
    "matplotlib",
    "seaborn",
    # anndata, etc.
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/yelu61/scRNA-toolkit"
Issues = "https://github.com/yelu61/scRNA-toolkit/issues"